--- a/assets/i18n/locales/zh-CN.toml
+++ b/assets/i18n/locales/zh-CN.toml
@@ -1,1 +1,18 @@
 hello = "app,你好，{{.Count}}，{{.Name}}！"
+
+
+err_db_add_nil = "数据库错误，插入对象为空"
+err_db_del_nil = "数据库错误，删除对象为空"
+err_db_upd_nil = "数据库错误，更新对象为空"
+err_db_que_nil = "数据库错误，查询对象为空"
+err_db_field_nil = "数据库错误，字段为空"
+err_db_field_large = "数据库错误，字段过长"
+err_db_field_short = "数据库错误，字段过短"
+err_db_field_max = "数据库错误，字段数量过多"
+err_db_field_min = "数据库错误，字段数量过少"
+err_db_field_range = "数据库错误，字段范围错误"
+err_db_field_undefined = "数据库错误，字段未定义"
+err_db_pk_duplicated = "数据库错误，唯一约束冲突"
+err_db_que_params = "数据库错误，查询参数错误"
+err_db_que_none = "数据库错误，未找到数据"
+err_db_que_foreign_none = "数据库错误，外键未找到数据"
