upd model validator

--- a/assets/i18n/active.zh.toml
+++ b/assets/i18n/active.zh.toml
@@ -26,3 +26,6 @@ account_password_format = "密码必须包含至少一个数字和一个字母"
 account_password_length = "密码长度必须在6-20个字符之间"
 phone_required = "手机号不能为空"
 phone_format = "手机号格式不正确"
+client_name = "客户端名称"
+bind_sss_refuse_nil = "请输入%s"
+bind_client_name_error = "客户端名称必须是2-50个字符的字母、数字、下划线或中划线"
