--- a/assets/i18n/active.zh.toml
+++ b/assets/i18n/active.zh.toml
@@ -7,26 +7,26 @@ err_db_del_nil = "数据库错误，删除对象为空"
 err_db_upd_nil = "数据库错误，更新对象为空"
 err_db_que_nil = "数据库错误，查询对象为空"
 err_db_field_nil = "数据库错误，字段为空"
-err_db_field_large = "数据库错误，字段过长"
-err_db_field_short = "数据库错误，字段过短"
-err_db_field_max = "数据库错误，字段数量过多"
-err_db_field_min = "数据库错误，字段数量过少"
-err_db_field_range = "数据库错误，字段范围错误"
 err_db_field_undefined = "数据库错误，字段未定义"
 err_db_pk_duplicated = "数据库错误，唯一约束冲突"
 err_db_que_params = "数据库错误，查询参数错误"
 err_db_que_none = "数据库错误，未找到数据"
 err_db_que_foreign_none = "数据库错误，外键未找到数据"
 
-account_username_required = "用户名不能为空"
-account_username_format = "用户名只能包含字母、数字和下划线"
-account_username_length = "用户名长度必须在3-20个字符之间"
-account_password_required = "密码不能为空"
-account_password_format = "密码必须包含至少一个数字和一个字母"
-account_password_length = "密码长度必须在6-20个字符之间"
-phone_required = "手机号不能为空"
-phone_format = "手机号格式不正确"
-
 client_name = "客户端名称"
-bind_sss_refuse_nil = "请输入%s"
-bind_client_name_error = "客户端名称必须是2-50个字符的字母、数字、下划线或中划线"
+
+format_s_input_required = "请输入%s"
+format_account_username_required = "用户名不能为空"
+format_email_required = "邮箱地址不能为空"
+format_phone_required = "手机号不能为空"
+format_pwd_required = "密码不能为空"
+
+format_account_username_err = "用户名只能包含字母、数字和下划线,长度必须在3-20个字符之间"
+format_email_err = "邮箱地址格式不正确"
+format_phone_err = "手机号格式不正确"
+format_pwd_err = "密码格式不正确,必须包含至少一个数字和一个字母,长度必须在6-20个字符之间"
+format_client_name_err = "客户端名称必须是1-50个字符的字母、数字、下划线或中划线"
+format_website_err = "网站地址格式不正确"
+format_copyrights_err = "版权信息格式不正确"
+format_support_url_err = "服务条款URL格式不正确"
+format_privacy_url_err = "隐私政策URL格式不正确"
