--- a/assets/i18n/active.zh.toml
+++ b/assets/i18n/active.zh.toml
@@ -24,6 +24,9 @@ format_email_required = "邮箱地址不能为空"
 format_phone_required = "手机号不能为空"
 format_pwd_required = "密码不能为空"
 
+format_create_at_err = "创建时间格式不正确"
+format_delete_at_err = "删除时间格式不正确"
+format_delete_by_err = "删除人格式不正确"
 format_account_username_err = "用户名只能包含字母、数字和下划线,长度必须在3-20个字符之间"
 format_email_err = "邮箱地址格式不正确"
 format_phone_err = "手机号格式不正确"
