--- a/assets/i18n/active.zh.toml
+++ b/assets/i18n/active.zh.toml
@@ -16,7 +16,9 @@ err_db_que_params = "数据库错误，查询参数错误"
 err_db_que_none = "数据库错误，未找到数据"
 err_db_que_foreign_none = "数据库错误，外键未找到数据"
 
-client_name = "客户端名称"
+org_name = "组织名称"
+org_parent = "上级组织"
+app_name = "应用名称"
 
 format_s_input_required = "请输入%s"
 format_account_username_required = "用户名不能为空"
@@ -31,9 +33,13 @@ format_account_username_err = "用户名只能包含字母、数字和下划线,
 format_email_err = "邮箱地址格式不正确"
 format_phone_err = "手机号格式不正确"
 format_pwd_err = "密码格式不正确,必须包含至少一个数字和一个字母,长度必须在6-20个字符之间"
-format_client_name_err = "客户端名称必须是1-50个字符的字母、数字、下划线或中划线"
+format_app_name_err = "应用名称必须是1-50个字符的字母、数字、下划线或中划线"
+format_team_name_err = "团队名称必须是1-50个字符的字母、数字、下划线或中划线"
 format_admin_note_err = "管理员备注格式不正确"
 format_website_err = "网站地址格式不正确"
+format_desc_err = "简介格式不正确"
+format_addresses_err = "地址列表格式不正确"
+format_contacts_err = "联系方式列表格式不正确"
 format_copyrights_err = "版权信息格式不正确"
 format_support_url_err = "服务条款URL格式不正确"
 format_privacy_url_err = "隐私政策URL格式不正确"
