--- a/assets/i18n/active.zh.toml
+++ b/assets/i18n/active.zh.toml
@@ -19,12 +19,16 @@ err_db_que_foreign_none = "数据库错误，外键未找到数据"
 org_name = "组织名称"
 org_parent = "上级组织"
 app_name = "应用名称"
+own_accounts = "拥有者账号"
+org_kind = "组织类型"
+org_become = "组织加入方式"
 
 format_s_input_required = "请输入%s"
 format_account_username_required = "用户名不能为空"
 format_email_required = "邮箱地址不能为空"
 format_phone_required = "手机号不能为空"
 format_pwd_required = "密码不能为空"
+format_tags_err = "标签格式不正确"
 
 format_create_at_err = "创建时间格式不正确"
 format_delete_at_err = "删除时间格式不正确"
@@ -34,7 +38,6 @@ format_email_err = "邮箱地址格式不正确"
 format_phone_err = "手机号格式不正确"
 format_pwd_err = "密码格式不正确,必须包含至少一个数字和一个字母,长度必须在6-20个字符之间"
 format_app_name_err = "应用名称必须是1-50个字符的字母、数字、下划线或中划线"
-format_team_name_err = "团队名称必须是1-50个字符的字母、数字、下划线或中划线"
 format_admin_note_err = "管理员备注格式不正确"
 format_website_err = "网站地址格式不正确"
 format_desc_err = "简介格式不正确"
@@ -44,3 +47,11 @@ format_copyrights_err = "版权信息格式不正确"
 format_support_url_err = "服务条款URL格式不正确"
 format_privacy_url_err = "隐私政策URL格式不正确"
 
+
+format_org_own_accs_err = "组织拥有者账号格式不正确"
+format_org_parents_err = "组织上级组织格式不正确"
+format_org_name_err = "组织名称格式不正确"
+format_org_display_err = "组织显示名称格式不正确"
+format_org_kind_err = "组织类型格式不正确"
+format_org_become_err = "组织加入格式不正确"
+format_org_tags_err = "组织标签格式不正确"
